--- a/T'Day Offical Wedding Planning.html
+++ b/T'Day Offical Wedding Planning.html
@@ -70,11 +70,10 @@ a:active {
   <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Contact Us</h6></a></button>
 </header>
 <div class="Introduction">
-  <h1 align="center" style="color: 3eccfd"> Book your Birthday Party</h1>
+  <h1 align="center" style="color: 3eccfd"> Book your Wedding Party</h1>
 </div>
 <div class="Form">
-  <iframe align="center" width="1000px" height="900px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__jkq1KlUQkc1M0dXUE5BOUswRFRFWUtRN0I3WUVQWS4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
-</div>
+  <iframe width="900" height="700" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__jkq1KlUQjJIVTNSMVI1QjhYMFhFNlFRSkRHU0tVSy4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe></div>
 <h1 style="color:02a556">-----------------------------------------------------</h1>
 </body>
 <footer>
