Update T'Day Offical Birthday Planning.html

--- a/T'Day Offical Birthday Planning.html
+++ b/T'Day Offical Birthday Planning.html
@@ -64,10 +64,10 @@ a:active {
 </head>
 <body>
 <header>
-  <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Home</h6></a></button>
-  <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Plan</h6></a></button>
-  <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Events</h6></a></button>
-  <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Contact Us</h6></a></button>
+  <button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Home Page.html"><h6>Home</h6></a></button>
+  <button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Booking Selction.html"><h6>Plan</h6></a></button>
+  <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Events Page.html"><h6>Events</h6></a></button>
+  <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Contact Us Page.html"><h6>Contact Us</h6></a></button>
 </header>
 <div class="Introduction">
   <h1 align="center" style="color: 3eccfd"> Book your Birthday Party</h1>
@@ -80,12 +80,12 @@ a:active {
 <footer>
   <table>
     <tr>
-      <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="file:///D:/Recovered%20Desgin%20Floder/T_day%20Offical%20Website/Images%20and%20Files/T'day%20Offical%20Home%20Page.html"><h6>Home</h6></a></button></th>
-      <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-in/surface"><h6>Plan</h6></a></button></th>
+      <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Home Page.html"><h6>Home</h6></a></button></th>
+      <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Booking Selction.html"><h6>Plan</h6></a></button></th>
     </tr>
     <tr>
-      <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-us/surface"><h6>Events</h6></a></button></td>
-      <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-uk/surface"><h6>Contact Us</h6></a></button></td>
+      <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Events Page.html"><h6>Events</h6></a></button></td>
+      <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Contact Us Page.html"><h6>Contact Us</h6></a></button></td>
     </tr>
   </table>
   <h6 align="center">© Copyright T'day 2022- 2023</h6>
