Update T'Day Offical Booking Selction.html

--- a/T'Day Offical Booking Selction.html
+++ b/T'Day Offical Booking Selction.html
@@ -66,12 +66,12 @@ a:active {
 <h1 align="center">Select Type of Party You Want To Plan</h1>
 <table align="center">
     <tr>
-        <th class="Button"><button class="header" style="padding: 50px 50px:background-color:02a556; border: none"> <a href="file:///D:/Recovered%20Desgin%20Floder/T_day%20Offical%20Website/Images%20and%20Files/T_day Official Booking Website.html"><h6>Birthday</h6></a></button></th>
-        <th class="Button"><button class="header" style="padding: 50px 50px:background-color:02a556; border: none"> <a href="https://www.microsoft.com/en-in/surface"><h6>Wedding</h6></a></button></th>
+        <th class="Button"><button class="header" style="padding: 50px 50px:background-color:02a556; border: none"> <a href="T'Day Offical Birthday Planning.html"><h6>Birthday</h6></a></button></th>
+        <th class="Button"><button class="header" style="padding: 50px 50px:background-color:02a556; border: none"> <a href="T'Day Offical Wedding Planning.html"><h6>Wedding</h6></a></button></th>
     </tr>
     <tr>
-        <td class="Button"><button class="header" style="padding: 50px 50px; background-color:02a556; border: none"> <a href="https://www.microsoft.com/en-us/surface"><h6>Celebration/Get together</h6></a></button></td>
-        <td class="Button"><button class="header" style="padding: 50px 50px; background-color:02a556; border: none"> <a href="https://www.microsoft.com/en-uk/surface"><h6>Custom</h6></a></button></td>
+        <td class="Button"><button class="header" style="padding: 50px 50px; background-color:02a556; border: none"> <a href="T'Day Offical Cele Planning.html"><h6>Celebration/Get together</h6></a></button></td>
+        <td class="Button"><button class="header" style="padding: 50px 50px; background-color:02a556; border: none"> <a href="T'Day Offical Custom Planning.html"><h6>Custom</h6></a></button></td>
     </tr>
 </table>
 </body>
