Update T'day Offical Contact Us Page.html

--- a/T'day Offical Contact Us Page.html
+++ b/T'day Offical Contact Us Page.html
@@ -67,15 +67,15 @@ a:active {
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Official Home Page.html"><h6>Home</h6></a></button>
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Official Booking Selection"><h6>Plan</h6></a></button>
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Events Page.html"><h6>Events</h6></a></button>
-    <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Contact Us</h6></a></button>
+    <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Contact Us Page.html"><h6>Contact Us</h6></a></button>
 </header>
 <div class="Events">
     <table>
         <tr>
-            <th><h6>None So Far</h6></th>
+            <th><h6>Please Email Us:</h6></th>
         </tr>
         <tr>
-            <td><h6>With T'day</h6> </td>
+            <td><h6>At theclosave@gmail.com </h6> </td>
         </tr>
     </table>
 </div>
@@ -85,12 +85,12 @@ a:active {
     <footer>
         <table>
             <tr>
-                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-ca/surface"><h6>Home</h6></a></button></th>
-                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-in/surface"><h6>Plan</h6></a></button></th>
+                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Home Page.html"><h6>Home</h6></a></button></th>
+                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Booking Selction.html"><h6>Plan</h6></a></button></th>
             </tr>
             <tr>
-                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-us/surface"><h6>Events</h6></a></button></td>
-                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-uk/surface"><h6>Contact Us</h6></a></button></td>
+                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Events Page.html"><h6>Events</h6></a></button></td>
+                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Contact Us Page.html"><h6>Contact Us</h6></a></button></td>
             </tr>
         </table>
         <h6 align="center">© Copyright T'day 2022- 2023</h6>
