--- a/T'Day Offical Home Page.html
+++ b/T'Day Offical Home Page.html
@@ -66,8 +66,8 @@ a:active {
 <header>
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Home Page.html"><h6>Home</h6></a></button>
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Official Booking Selection"><h6>Plan</h6></a></button>
-    <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Events</h6></a></button>
-    <button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/surface"><h6>Contact Us</h6></a></button>
+    <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Events Page.html"><h6>Events</h6></a></button>
+    <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Contact Us Page.html"><h6>Contact Us</h6></a></button>
 <div class="Introduction">
 <h1 align="center"> Welcome to T'day</h1>
 <h2 align="center"> Your Party Planing Paradise</h2>
@@ -87,7 +87,7 @@ a:active {
 <div class="container">
     <div class="center">
     <button style="background-color:02a556;" class="book-now-button">
-    <a href="D:\Desigin M3\T'day Offical Website\Images and Files\T'day Offical Booking Website.html" class="glue-button glue-button--high-emphasis hero-btn" target="_blank" rel="noopener noreferrer" data-category="cta" data-action="Book Now" data-label="hero">Book Now with T'day</a>
+    <a href="T'Day Offical Booking Selction.html" class="glue-button glue-button--high-emphasis hero-btn" target="_blank" rel="noopener noreferrer" data-category="cta" data-action="Book Now" data-label="hero">Book Now with T'day</a>
         </button>
     </div>
 </div>
@@ -108,12 +108,12 @@ a:active {
     <footer>
         <table>
             <tr>
-                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-ca/surface"><h6>Home</h6></a></button></th>
-                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-in/surface"><h6>Plan</h6></a></button></th>
+                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Home Page.html"><h6>Home</h6></a></button></th>
+                <th class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Booking Selction.html"><h6>Plan</h6></a></button></th>
             </tr>
             <tr>
-                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-us/surface"><h6>Events</h6></a></button></td>
-                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="https://www.microsoft.com/en-uk/surface"><h6>Contact Us</h6></a></button></td>
+                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Events Page.html"><h6>Events</h6></a></button></td>
+                <td class="Button"><button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Contact Us Page.html"><h6>Contact Us</h6></a></button></td>
             </tr>
         </table>
         <h6 align="center">© Copyright T'day 2022- 2023</h6>
