Update T'Day Offical Home Page.html

--- a/T'Day Offical Home Page.html
+++ b/T'Day Offical Home Page.html
@@ -65,7 +65,7 @@ a:active {
 <body>
 <header>
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Home Page.html"><h6>Home</h6></a></button>
-    <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Official Booking Selection"><h6>Plan</h6></a></button>
+    <button class="header" style="padding: 15px 20px; border: none"> <a href="T'Day Offical Booking Selction.html"><h6>Plan</h6></a></button>
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Events Page.html"><h6>Events</h6></a></button>
     <button class="header" style="padding: 15px 20px; border: none"> <a href="T'day Offical Contact Us Page.html"><h6>Contact Us</h6></a></button>
 <div class="Introduction">
